Changes to the mobile view

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 									</ul>
 									</li>
 									<li>
-										<a href="#">Services</a>
+										<a href="#">Anna palautetta</a>
 									</li>	  
 						</ul>
 					</nav>
@@ -182,7 +182,7 @@
 						  <div class="container">
 							  <div class="row">
 								  <div class="col-md-12"> 
-										<h2> Yhteishaut ja hakulomaket</h2>	
+										<h2> Yhteishaut ja hakulomakkeet</h2>	
 								  </div>
 								</div>
 								<div class="hidden-xs hidden-sm">
