--- a/search.html
+++ b/search.html
@@ -200,7 +200,7 @@
 							</div>
 							<div class="row"> 
 								<div class="col-xs-12 col-md-6 box-container">
-									<div class="col-xs-12 search-box">
+									<div class="col-xs-12 search-box haku">
 										<div class="suosikkit">
 												<i class="fa fa-heart-o" aria-hidden="true"></i>
 										</div>
@@ -217,7 +217,7 @@
 									</div>
 								</div>
 								<div class="col-xs-12 col-md-6 box-container">
-										<div class="col-xs-12 search-box">
+										<div class="col-xs-12 search-box haku">
 												<div class="suosikkit">
 														<i class="fa fa-heart-o" aria-hidden="true"></i>
 												</div>
@@ -236,7 +236,7 @@
 							</div>
 							<div class="row">
 								<div class="col-xs-12 col-md-6 box-container">
-										<div class="col-xs-12 search-box">
+										<div class="col-xs-12 search-box haku">
 												<div class="suosikkit">
 														<i class="fa fa-heart-o" aria-hidden="true"></i>
 												</div>
@@ -253,7 +253,7 @@
 										</div>
 								</div>
 								<div class="col-xs-12 col-md-6 box-container">
-										<div class="col-xs-12 search-box">
+										<div class="col-xs-12 search-box haku">
 												<div class="suosikkit">
 														<i class="fa fa-heart-o" aria-hidden="true"></i>
 												</div>
@@ -272,7 +272,7 @@
 							</div>
 							<div class="row">
 									<div class="col-xs-12 col-md-6 box-container">
-											<div class="col-xs-12 search-box">
+											<div class="col-xs-12 search-box haku">
 													<div class="suosikkit">
 															<i class="fa fa-heart-o" aria-hidden="true"></i>
 													</div>
@@ -289,7 +289,7 @@
 											</div>
 									</div>
 									<div class="col-xs-12 col-md-6 box-container">
-											<div class="col-xs-12 search-box">
+											<div class="col-xs-12 search-box haku">
 													<div class="suosikkit">
 															<i class="fa fa-heart-o" aria-hidden="true"></i>
 													</div>
