--- a/oppilaitos.html
+++ b/oppilaitos.html
@@ -3,7 +3,7 @@
 		 <meta charset="UTF-8">
 		 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-		 <title>Opintipolku - Koulutus</title>
+		 <title>Opintipolku - Oppilaitos</title>
 		 <link href="css/bootstrap.min.css" rel="stylesheet">
 		 <link href="css/oph-styles-min.css" rel="stylesheet">
 		 <link href="css/styles.css" rel="stylesheet">
@@ -137,7 +137,7 @@
 									 </ul>
 									 </li>
 									 <li>
-										 <a href="#">Services</a>
+										 <a href="#">Anna palautetta</a>
 									 </li>	  
 						 </ul>
 					 </nav>
@@ -183,7 +183,7 @@
 							 <div class="container">
 									<div class="row info-page oppilaitos">
 											<div class="col-xs-12 col-md-9 left-column" >
-													<h1><i class="fa fa-circle" aria-hidden="true"></i> Koulutuskeskus Salpaus, Lahti</h1>
+													<h1><i class="fa fa-circle" aria-hidden="true"></i> <span>Koulutuskeskus Salpaus, Lahti</span></h1>
 											<div class="row panel-body">		
 											<div class="col-xs-12">
 												<p>Koulutuskeskus Salpaus on toisen asteen oppilaitos, jonka toimialueena on koko Päijät-Häme.
@@ -205,7 +205,7 @@
 											<div class="col-xs-12">
 													<div class="row"> 
 															<div class="col-xs-12 col-md-6 box-container">
-																<div class="col-xs-12 search-box">
+																<div class="col-xs-12 search-box haku">
 																	<div class="suosikkit">
 																			<i class="fa fa-heart-o" aria-hidden="true"></i>
 																	</div>
@@ -249,7 +249,7 @@
 														</div>
 													</div>
 													<div class="col-xs-12 col-md-6 box-container">
-															<div class="col-xs-12 search-box">
+															<div class="col-xs-12 search-box haku">
 																	<div class="suosikkit">
 																			<i class="fa fa-heart-o" aria-hidden="true"></i>
 																	</div>
