compare page and filters
Filters working in all pages. Ota vertailu working in the search results page

--- a/index.html
+++ b/index.html
@@ -142,7 +142,6 @@
 						</ul>
 					</nav>
 				<!-- /#sidebar-wrapper -->
-		
 				<!-- Page Content -->
 				<div id="page-content-wrapper">
 				<div class="container">
@@ -161,8 +160,158 @@
 								<div class="container">
 										<div class="row">
 												<div class="col-xs-12 col-md-8 header-search main">
-													  <input id="regular-input" class="oph-input" type="text" value="Etsi ja vertaile koulutuksia tai opplaitoksia" placeholder="Placeholder">
-													  <a href="search.html" class="search-button"></a>
+													<div class="search">
+														<input id="regular-input" class="oph-input" type="text" placeholder="Etsi ja vertaile koulutuksia tai opplaitoksia" placeholder="Placeholder">
+														<a href="search.html" class="search-button"></a>
+													</div>
+													  <a class="filter-button index-page"></a>
+													  <div class="row filters-layer">
+														<div class="filter-container index">
+															<div class="filter-options index">
+																<div class="col-xs-12 filters-main">
+																<div class="form-group">
+																	<ul class="filter-menu">
+																		<li><a href="#">Kaikki kategoriat</a></li>
+																		<li class="selected"><a href="#">Koulutukset</a></li>
+																	</ul>
+																</div>
+																<div class="form-group">
+																	<h5>Pohjakoulutus</h5>	
+																	<div class="checkbox">
+																		<label>
+																			<input type="checkbox" value="">
+																			<span class="cr"><i class="cr-icon fa fa-check"></i></span>
+																			Peruskoulu
+																		</label>
+																	</div>
+																	<div class="checkbox">
+																		<label>
+																			<input type="checkbox" value="">
+																			<span class="cr"><i class="cr-icon fa fa-check"></i></span>
+																			Lukio
+																		</label>
+																	</div>
+																	<div class="checkbox">
+																		<label>
+																			<input type="checkbox" value="">
+																			<span class="cr"><i class="cr-icon fa fa-check"></i></span>
+																			Ammatillinen koulutus
+																		</label>
+																	</div>
+																	<div class="checkbox">
+																			<label>
+																				<input type="checkbox" value="">
+																				<span class="cr"><i class="cr-icon fa fa-check"></i></span>
+																				Korkeakoulutus
+																			</label>
+																	</div>
+																</div>
+																<div class="form-group tyyppi">
+																	<h5>Koulutustyyppi</h5>	
+																		<div class="checkbox">
+																			<label>
+																				<input type="checkbox" value="">
+																				<span class="cr"><i class="cr-icon fa fa-check"></i></span>
+																				Lukio
+																			</label>
+																			<span class="cr ch-1"></span>
+																		</div>
+																		<div class="checkbox">
+																			<label>
+																				<input type="checkbox" value="">
+																				<span class="cr"><i class="cr-icon fa fa-check"></i></span>
+																				Ammatillinen koulutus
+																			</label>
+																			<span class="cr ch-2"></span>
+																		</div>
+																		<div class="checkbox">
+																				<label>
+																					<input type="checkbox" value="">
+																					<span class="cr"><i class="cr-icon fa fa-check"></i></span>
+																					Korkeakoulutus
+																				</label>
+																				<span class="cr ch-3"></span>
+																		</div>
+																	<div class="checkbox ck-4">
+																			<label>
+																				<input type="checkbox" value="">
+																				<span class="cr"><i class="cr-icon fa fa-check"></i></span>
+																				Avoin korkeakoulu
+																			</label>
+																			<span class="cr ch-4"></span>
+																		</div>	
+																			<div class="checkbox">
+																				<label>
+																					<input type="checkbox" value="">
+																					<span class="cr"><i class="cr-icon fa fa-check"></i></span>
+																					Työväenopiston kurssi
+																				</label>
+																				<span class="cr ch-5"></span>
+																			</div>
+																		</div>
+																		<div class="form-group">
+																				<h5>Opetusmuoto</h5>	
+																					<div class="checkbox">
+																						<label>
+																							<input type="checkbox" value="">
+																							<span class="cr"><i class="cr-icon fa fa-check"></i></span>
+																							Lähiopetus
+																						</label>
+																					</div>
+																					<div class="checkbox">
+																						<label>
+																							<input type="checkbox" value="">
+																							<span class="cr"><i class="cr-icon fa fa-check"></i></span>
+																							Itsenäinen opiskelu
+																						</label>
+																					</div>
+																					<div class="checkbox">
+																							<label>
+																								<input type="checkbox" value="">
+																								<span class="cr"><i class="cr-icon fa fa-check"></i></span>
+																								Ohjattu opiskelu
+																							</label>
+																					</div>
+																		</div>
+																	<hr>
+																	<div class="form-group">
+																		<h5>Paikkakunta</h5>
+																		<input id="regular-input" class="oph-input" type="text" placeholder="Syötä paikkakunnan nimi">
+																	</div>
+																	<hr>
+																	<div class="form-group">
+																		<h5>Opetusaika</h5>	
+																		<div class="checkbox">
+																			<label>
+																				<input type="checkbox" value="">
+																				<span class="cr"><i class="cr-icon fa fa-check"></i></span>
+																				Päiväopetus
+																			</label>
+																		</div>
+																		<div class="checkbox">
+																			<label>
+																				<input type="checkbox" value="">
+																				<span class="cr"><i class="cr-icon fa fa-check"></i></span>
+																				Iltaopetus
+																			</label>
+																		</div>
+																		<div class="checkbox">
+																			<label>
+																				<input type="checkbox" value="">
+																				<span class="cr"><i class="cr-icon fa fa-check"></i></span>
+																				Viikonloppuopetus
+																			</label>
+																		</div>
+																	</div>
+																	<hr>
+																	<div class="form-group action-buttons">
+																		<a href="search.html" role="button" class="btn btn-primary">HAE</a>
+																		<a class="clear-compare" href="#">Poista rajaukset</a>
+																	</div>		
+																</div>
+															</div>
+														</div>	
+												</div>
 												</div>
 												<div class="hidden-xs hidden-sm col-md-4">
 													<ul class="right-links">
@@ -177,8 +326,7 @@
 								</div>
 								  
 							</div>
-					  
-						  </div>
+						  </div> 
 						  <div class="container">
 							  <div class="row">
 								  <div class="col-md-12"> 
@@ -365,30 +513,42 @@
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script>
 		$(document).ready(function () {
-		var trigger = $('.menu'),
-			overlay = $('.overlay'),
-			isClosed = false;
-
-			trigger.click(function () {
-			menu_cross();      
-			});
-
-			function menu_cross() {
-
-			if (isClosed) {          
-				overlay.hide();
-				trigger.removeClass('is-open');
-				trigger.addClass('is-closed');
+			var trigger = $('.menu'),
+				overlay = $('.overlay'),
 				isClosed = false;
-			} else {   
-				overlay.show();
-				trigger.removeClass('is-closed');
-				trigger.addClass('is-open');
-				isClosed = true;
+
+				trigger.click(function () {
+				menu_cross();      
+				});
+				function menu_cross() {
+				if (isClosed) {          
+					overlay.hide();
+					trigger.removeClass('is-open');
+					trigger.addClass('is-closed');
+					isClosed = false;
+				} else {   
+					overlay.show();
+					trigger.removeClass('is-closed');
+					trigger.addClass('is-open');
+					isClosed = true;
+				}
 			}
-		}
 			$('[data-toggle="offcanvas"]').click(function () {
 					$('#wrapper').toggleClass('toggled');
+			});
+			if($(".filter-options").outerHeight() >= ($(window).innerHeight() + 5)) {
+				console.log($(".filter-options").outerHeight());
+					$(".filter-options").css("height", $(window).innerHeight() - ($(".container.navigation").outerHeight() + $("#call-to-action").outerHeight()));
+			}
+			$(".filter-button").on("click", function(){
+				$(this).toggleClass( "sulje");
+				$(".filter-container").toggleClass("open");
+				if($(window).innerWidth() <= 768) {
+					$("body").toggleClass("no-scroll");
+				}
+			});
+			$(window).on("resize", function() {
+				$(".filter-options").css("height", $(window).innerHeight() - ($(".container.navigation").outerHeight()+$("#call-to-action").outerHeight()));
 			});  
 		});
 </script>
