--- a/compare.html
+++ b/compare.html
@@ -548,9 +548,9 @@
 					   </div>
 				   </div>
 			   </footer>
-				   </div>
-				   <!-- /#page-content-wrapper -->
-			   </div>
+			</div>
+			<!-- /#page-content-wrapper -->
+			  </div>
 			   <!-- /#wrapper -->
 	   <script type="text/javascript" src="js/jquery.min.js"></script>	
 	   <script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -658,7 +658,7 @@
 			   });
 			   
 		   });
-   </script>
-	</body>
-	</html>
+	</script>
+</body>
+</html>
 	
