--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
  <html lang="en">
  <head>
 	<meta charset="UTF-8">
@@ -497,7 +498,7 @@
 													  <li><i class="fa fa-twitter-square" aria-hidden="true"></i></li>
 													  <li><i class="fa fa-facebook-square" aria-hidden="true"></i></li>
 													  <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
-												  </ul>
+												  </ul>
 											  </div>
 										  </div>
 									  </div>
@@ -552,6 +553,6 @@
 			});  
 		});
 </script>
- </body>
+</body>
  </html>
  
