Added functionality to compare button.
Compare button should be disabled if there is only 1 item to compare. Modified compare page content

--- a/compare.html
+++ b/compare.html
@@ -326,9 +326,9 @@
 							<div class="container">
 								<div class="row">
 									<div id="compared-subjects">
-										 <div class="col-xs-12 col-md-3 compare-box"> <button type="button" class="close" aria-label="Close"><i class="fa fa-times" aria-hidden="true"></i></button> <a href="koulutus.html" class="title" >Tieto ja viestintätekniikan perustutkinto, 180 osaamispistettä</a> <a href="koulutus.html" class="button">Tutustu</a> </div>
-										 <div class="col-xs-12 col-md-3 compare-box"> <button type="button" class="close" aria-label="Close"><i class="fa fa-times" aria-hidden="true"></i></button> <a href="koulutus.html" class="title" >Tieto- ja viestintätekniikan erikoisammattitutkinto, aikuiskoulutus, Datanomi (eat).</a> <a href="koulutus.html" class="button">Tutustu</a> </div>
-										 <div class="col-xs-12 col-md-3 compare-box"> <button type="button" class="close" aria-label="Close"><i class="fa fa-times" aria-hidden="true"></i></button> <a href="koulutus.html" class="title" >Tieto- ja viestintätekniikan ammattitutkinto, aikuiskoulutus, Datanomi (at)</a> <a href="koulutus.html" class="button">Tutustu</a> </div>
+										 <div class="col-xs-12 col-md-3 compare-box"> <button type="button" class="close" aria-label="Close"><i class="fa fa-times" aria-hidden="true"></i></button> <a href="koulutus.html" class="title" >Ammattiopisto Tavastia, Hämeenlinna</a> <a href="koulutus.html" class="button">Tutustu</a> </div>
+										 <div class="col-xs-12 col-md-3 compare-box"> <button type="button" class="close" aria-label="Close"><i class="fa fa-times" aria-hidden="true"></i></button> <a href="koulutus.html" class="title" >Keuda, Kerava, Keskikatu.</a> <a href="koulutus.html" class="button">Tutustu</a> </div>
+										 <div class="col-xs-12 col-md-3 compare-box"> <button type="button" class="close" aria-label="Close"><i class="fa fa-times" aria-hidden="true"></i></button> <a href="koulutus.html" class="title" >WinNova, Pori</a> <a href="koulutus.html" class="button">Tutustu</a> </div>
 									</div>
 								</div>
 							</div>
@@ -340,7 +340,7 @@
 								</div>
 								<div class="col-xs-6">
 									<div class="col-xs-12">10.08.2018</div>
-									<div class="col-xs-12">Kevät 2019</div>
+									<div class="col-xs-12">Kevät 2018</div>
 								</div>
 							</div>
 							<div class="row">
@@ -349,8 +349,8 @@
 								</div>
 								<div class="col-xs-6">
 									<div class="col-xs-12">Suomi</div>
-									<div class="col-xs-12">Suomi</div>
-									<div class="col-xs-12">Suomi, Englanti</div>
+									<div class="col-xs-12">suomi, englanti</div>
+									<div class="col-xs-12">suomi, englanti</div>
 								</div>
 							</div>
 							<div class="row">
@@ -379,8 +379,8 @@
 								</div>
 								<div class="col-xs-6">
 									<div class="col-xs-12">Päiväopetus</div>
-									<div class="col-xs-12">Päiväopetus</div>
-									<div class="col-xs-12">Iltaopetus</div>
+									<div class="col-xs-12">Iltaopetus</div>
+									<div class="col-xs-12">Ilta- ja viikonloppuopetus</div>
 								</div>
 							</div>
 							<div class="row">
@@ -389,8 +389,8 @@
 								</div>
 								<div class="col-xs-6">
 									<div class="col-xs-12">Lähiopetus</div>
-									<div class="col-xs-12">Lähiopetus</div>
-									<div class="col-xs-12">Monimuoto</div>
+									<div class="col-xs-12">Lähiopetus, etäopetus</div>
+									<div class="col-xs-12">Lähiopetus, etäopetus</div>
 								</div>
 							</div>
 							<div class="row">
@@ -399,8 +399,8 @@
 								</div>
 								<div class="col-xs-6">
 									<div class="col-xs-12">Ohjattu opetus</div>
-									<div class="col-xs-12">Ohjattu opetus</div>
-									<div class="col-xs-12">Ohjattu opetus</div>
+									<div class="col-xs-12">Monimuoto</div>
+									<div class="col-xs-12">Monimuoto</div>
 								</div>
 							</div>
 							<div class="row">
@@ -430,22 +430,22 @@
 									 <div class="col-md-3 l-blue-top">
 										 <div class="col-xs-11 compare-box">
 											 <button type="button" class="close" aria-label="Close"><i class="fa fa-times" aria-hidden="true"></i></button>
-											 <a href="koulutus.html" class="title" >Tieto ja viestintätekniikan perustutkinto, 180 osaamispistettä</a>
-											 <a href="koulutus.html" class="button">Tutustu</a>
+											 <a href="koulutus1.html" class="title" >Ammattiopisto Tavastia, Hämeenlinna</a>
+											 <a href="koulutus1.html" class="button">Tutustu</a>
 										 </div>
 									 </div>
 									 <div class="col-md-3 d-blue-top">
 										 <div class="col-xs-11 compare-box">
 											 <button type="button" class="close" aria-label="Close"><i class="fa fa-times" aria-hidden="true"></i></button>
-											 <a href="koulutus.html" class="title" >Tieto- ja viestintätekniikan erikoisammattitutkinto, aikuiskoulutus, Datanomi (eat).</a>
-											 <a href="koulutus.html" class="button">Tutustu</a>
+											 <a href="koulutus1.html" class="title" >Keuda, Kerava, Keskikatu</a>
+											 <a href="koulutus1.html" class="button">Tutustu</a>
 										 </div>
 									 </div>
 									 <div class="col-md-3 l-blue-top">
 										 <div class="col-xs-11 compare-box">
 											 <button type="button" class="close" aria-label="Close"><i class="fa fa-times" aria-hidden="true"></i></button>
-											 <a href="koulutus.html" class="title" >Tieto- ja viestintätekniikan ammattitutkinto, aikuiskoulutus, Datanomi (at)</a>
-											 <a href="koulutus.html" class="button">Tutustu</a>
+											 <a href="koulutus1.html" class="title" >WinNova, Pori</a>
+											 <a href="koulutus1.html" class="button">Tutustu</a>
 										 </div>
 									 </div>
 							 </div>
@@ -478,26 +478,26 @@
 									 </div>	
 									 <div class="col-md-3 d-blue-bottom">
 										 <ul class="list-group">
-											 <li class="list-group-item">10.08.2018</li>
-											 <li class="list-group-item">Suomi</li>
+											 <li class="list-group-item">Kevät 2018</li>
+											 <li class="list-group-item">suomi, englanti</li>
 											 <li class="list-group-item">180 osaamispistettä</li>
 											 <li class="list-group-item">2 vuotta</li>
 											 <li class="list-group-item">Päiväopetus</li>
-											 <li class="list-group-item">Lähiopetus</li>
-											 <li class="list-group-item">Ohjattu opetus</li>
+											 <li class="list-group-item">Lähiopetus, etäopetus</li>
+											 <li class="list-group-item">Monimuoto</li>
 											 <li class="list-group-item">Peruskoulu</li>
 											 <li class="list-group-item">Maksuton</li>
 										 </ul>
 									 </div>	
 									 <div class="col-md-3 l-blue-bottom right">
 										 <ul class="list-group">
-											 <li class="list-group-item">10.08.2018</li>
-											 <li class="list-group-item">Suomi</li>
+											 <li class="list-group-item">Kevät 2018</li>
+											 <li class="list-group-item">suomi, englanti</li>
 											 <li class="list-group-item">180 osaamispistettä</li>
-											 <li class="list-group-item">2 vuotta</li>
-											 <li class="list-group-item">Päiväopetus</li>
-											 <li class="list-group-item">Lähiopetus</li>
-											 <li class="list-group-item">Ohjattu opetus</li>
+											 <li class="list-group-item">3 vuotta</li>
+											 <li class="list-group-item">Ilta- ja viikonloppuopetus</li>
+											 <li class="list-group-item">Lähiopetus, etäopetus</li>
+											 <li class="list-group-item">Monimuoto</li>
 											 <li class="list-group-item">Peruskoulu</li>
 											 <li class="list-group-item">Maksuton</li>
 										 </ul>
@@ -577,29 +577,36 @@
 					   isClosed = true;
 				   }
 			   }
-			   function checkCompareLayer (blockContent,blockId) {
-				   var compareFieldsSelected = $(".haku .poista").length > 0 ? true : false;
-				   var numberOfFieldsSelected = $(".haku .poista").length;
-				   var isCompareLayerOpen = $("#compare-row .hidden").length > 0 ? true : false;
-				   var boxAlreadyExist = $("#box-"+blockId+"").length > 0 ? true : false;
-				   if (compareFieldsSelected) {
-					   if (numberOfFieldsSelected <= 3) {
-						   if (!isCompareLayerOpen) {
-							   $("#compare-row").removeClass("hidden");
-							   if (!boxAlreadyExist) {
-								   $("#compared-subjects").append('<div class="col-xs-12 col-md-3 compare-box" id="box-'+ blockId +'"> <button type="button" class="close" aria-label="Close"><i class="fa fa-times" aria-hidden="true"></i></button> <a href="koulutus.html" class="title" >'+ blockContent +'</a> <a href="koulutus.html" class="button">Tutustu</a> </div>');		
-							   } else {
-								   $("#box-"+blockId+"").remove();
-							   }
-						   }
-					   }
-				   } else {
-					   $("#compare-row").addClass("hidden");
-					   $("#compared-subjects").html("");
-					   $("#compare-row").removeClass("closed");
-					   $(".toggle-compare").removeClass("closed");
-				   }
-			   }
+			   function checkCompareLayer(blockContent, blockId) {
+				var compareFieldsSelected = $(".search-box .poista").length > 0 ? true : false;
+				var numberOfFieldsSelected = $(".search-box .poista").length;
+				var isCompareLayerOpen = $("#compare-row .hidden").length > 0 ? true : false;
+				var boxAlreadyExist = $("#box-" + blockId + "").length > 0 ? true : false;
+				if (compareFieldsSelected) {
+					if (numberOfFieldsSelected <= 3) {
+						if (!isCompareLayerOpen) {
+							$("#compare-row").removeClass("hidden");
+							if (numberOfFieldsSelected == 1) {
+								$("#compare-row .pull-right .btn").addClass("disabled");
+							} else {
+								$("#compare-row .pull-right .btn").removeClass("disabled");
+							}
+							if (!boxAlreadyExist) {
+								$("#compared-subjects").append('<div class="col-xs-12 col-md-3 compare-box" id="box-' + blockId +
+									'"> <button type="button" class="close" aria-label="Close"><i class="fa fa-times" aria-hidden="true"></i></button> <a href="'+blockContent.link+'" class="title" >' +
+									blockContent.text + '</a> <a href="'+blockContent.link+'" class="button">Tutustu</a> </div>');
+							} else {
+								$("#box-" + blockId + "").remove();
+							}
+						}
+					}
+				} else {
+					$("#compare-row").addClass("hidden");
+					$("#compared-subjects").html("");
+					$("#compare-row").removeClass("closed");
+					$(".toggle-compare").removeClass("closed");
+				}
+			}
 			   $(".search-results").on("click", ".compare-button span", function(e) {
 				   var buttonIndex = $(this).closest(".haku").index(".haku");
 				   var numberOfFieldsSelected = $(".haku .poista").length;
@@ -628,6 +635,9 @@
 				   $(".haku:eq("+boxId+") .compare-button span").removeClass("poista");
 				   $("#box-"+boxId+"").css("display", "none");
 				   $("#box-"+boxId+".compare-box").remove();
+				   if (compareBox === 2) {
+					   $("#compare-row .pull-right .btn").addClass("disabled");
+					}
 				   if (compareBox === 1){
 					   $("#compare-row").addClass("hidden");
 					   $("#compared-subjects").html("");
