--- a/koulutus2.html
+++ b/koulutus2.html
@@ -572,24 +572,24 @@
 										<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 											<div class="panel-body">
 												<ul class="tutkinnon-osat">
-													<li>
-														<a href="#">1. Tieto- ja viestintäteknisessä toimintaympäristössä toimiminen</a>
-													</li>
-													<li>
-														<a href="#">2. Ohjelmiston suunnittelu</a>
-													</li>
-													<li>
-														<a href="#">3. Ohjelmiston toteuttaminen, testaaminen ja käyttöönotto</a>
-													</li>
-													<li>
-														<a href="#">4. Palvelin- ja työasematuessa toimiminen</a>
-													</li>
-													<li>
-														<a href="#">5. Tietoliikenneverkkotuessa toimiminen</a>
-													</li>
-													<li>
-														<a href="#">6. Sovellus- ja neuvontapalvelutuessa toimiminen</a>
-													</li>
+														<li>
+																<a href="tutkinnonosat1.html">1. Tieto- ja viestintäteknisessä toimintaympäristössä toimiminen</a>
+															</li>
+															<li>
+																<a href="tutkinnonosat2.html">2. Ohjelmiston suunnittelu</a>
+															</li>
+															<li>
+																<a href="tutkinnonosat3.html">3. Ohjelmiston toteuttaminen, testaaminen ja käyttöönotto</a>
+															</li>
+															<li>
+																<a href="tutkinnonosat4.html">4. Palvelin- ja työasematuessa toimiminen</a>
+															</li>
+															<li>
+																<a href="tutkinnonosat5.html">5. Tietoliikenneverkkotuessa toimiminen</a>
+															</li>
+															<li>
+																<a href="tutkinnonosat6.html">6. Sovellus- ja neuvontapalvelutuessa toimiminen</a>
+															</li>
 												</ul>
 											</div>
 										</div>
@@ -902,16 +902,21 @@
 					isClosed = true;
 				}
 			}
-
 			function checkCompareLayer(blockContent, blockId) {
 				var compareFieldsSelected = $(".search-box .poista").length > 0 ? true : false;
 				var numberOfFieldsSelected = $(".search-box .poista").length;
 				var isCompareLayerOpen = $("#compare-row .hidden").length > 0 ? true : false;
 				var boxAlreadyExist = $("#box-" + blockId + "").length > 0 ? true : false;
 				if (compareFieldsSelected) {
+					
 					if (numberOfFieldsSelected <= 3) {
 						if (!isCompareLayerOpen) {
 							$("#compare-row").removeClass("hidden");
+							if (numberOfFieldsSelected == 1) {
+								$("#compare-row .pull-right .btn").addClass("disabled");
+							} else {
+								$("#compare-row .pull-right .btn").removeClass("disabled");
+							}
 							if (!boxAlreadyExist) {
 								$("#compared-subjects").append('<div class="col-xs-12 col-md-3 compare-box" id="box-' + blockId +
 									'"> <button type="button" class="close" aria-label="Close"><i class="fa fa-times" aria-hidden="true"></i></button> <a href="'+blockContent.link+'" class="title" >' +
@@ -967,6 +972,9 @@
 				$(".search-box:eq(" + boxId + ") .compare-button span").removeClass("poista");
 				$("#box-" + boxId + "").css("display", "none");
 				$("#box-" + boxId + ".compare-box").remove();
+				if (compareBox === 2) {
+					$("#compare-row .pull-right .btn").addClass("disabled");
+				}
 				if (compareBox === 1) {
 					$("#compare-row").addClass("hidden");
 					$("#compared-subjects").html("");
