--- a/tutkinnonosat5.html
+++ b/tutkinnonosat5.html
@@ -949,9 +949,15 @@
 				var isCompareLayerOpen = $("#compare-row .hidden").length > 0 ? true : false;
 				var boxAlreadyExist = $("#box-" + blockId + "").length > 0 ? true : false;
 				if (compareFieldsSelected) {
+					
 					if (numberOfFieldsSelected <= 3) {
 						if (!isCompareLayerOpen) {
 							$("#compare-row").removeClass("hidden");
+							if (numberOfFieldsSelected == 1) {
+								$("#compare-row .pull-right .btn").addClass("disabled");
+							} else {
+								$("#compare-row .pull-right .btn").removeClass("disabled");
+							}
 							if (!boxAlreadyExist) {
 								$("#compared-subjects").append('<div class="col-xs-12 col-md-3 compare-box" id="box-' + blockId +
 									'"> <button type="button" class="close" aria-label="Close"><i class="fa fa-times" aria-hidden="true"></i></button> <a href="'+blockContent.link+'" class="title" >' +
@@ -1007,6 +1013,9 @@
 				$(".search-box:eq(" + boxId + ") .compare-button span").removeClass("poista");
 				$("#box-" + boxId + "").css("display", "none");
 				$("#box-" + boxId + ".compare-box").remove();
+				if (compareBox === 2) {
+					$("#compare-row .pull-right .btn").addClass("disabled");
+				}
 				if (compareBox === 1) {
 					$("#compare-row").addClass("hidden");
 					$("#compared-subjects").html("");
